--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Mar 18 23:59:49 2005  Soeren Sandmann  <sandmann@redhat.com>
+
+	* gtk/gtkmenutoolbutton.c (arrow_button_button_press_event_cb):
+	Make right-clicks not pop up the menu.
+
 2005-03-18  Owen Taylor  <otaylor@redhat.com>
 
 	* gdk/x11/gdkdrawable-x11.c (_gdk_x11_drawable_finish): 
