--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-03-21  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk/gdkpango.c (gdk_pango_renderer_class_init): 
+	* gdk/gdkdisplaymanager.c (gdk_display_manager_class_init): Mark
+	param spec strings as static.
+
 2005-03-21  Tor Lillqvist  <tml@novell.com>
 
 	* modules/engines/ms-windows/*.c: Silence gcc warnings (unused
