The state should be the pre-event state. (#169753)
	* gdk/win32/gdkevents-win32.c (build_pointer_event_state): The
	state should be the pre-event state. (#169753)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-27  Tor Lillqvist  <tml@novell.com>
+
+	* configure.in: Apparently AC_LIBTOOL_WIN32_DLL isn't deprecated
+	after all, and in fact necessary with HEAD libtool.
+
 2005-03-23  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkfilechooserbutton.c (update_combo_box): Remove
