--- a/gdk-pixbuf/ChangeLog
+++ b/gdk-pixbuf/ChangeLog
@@ -1,3 +1,8 @@
+Sun Mar 27 19:59:52 2005  Manish Singh  <yosh@gimp.org>
+
+	* io-bmp.c (grow_buffer): reject 0-sized buffers as corrupt header
+	data. Fixes bug #171707.
+
 2005-03-25  Matthias Clasen  <mclasen@redhat.com>
 
 	* gdk-pixbuf-data.c (gdk_pixbuf_new_from_data): Use canonical
