--- a/gdk-pixbuf/ChangeLog
+++ b/gdk-pixbuf/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-30  Matthias Clasen  <mclasen@redhat.com>
+
+	* io-bmp.c: Avoid bus errors due to unaligned access. (#168173,
+	Morten Welinder, Ivan Wong)
+
 2005-03-29  Matthias Clasen  <mclasen@redhat.com>
 
 	* io-tga.c (parse_rle_data): Fix the update areas for incremental
