--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-30  Steve Murphy <murf@e-tools.com>
+
+	* rw.po: Updated Kinyarwanda translations.
+
 2005-03-30  Estêvão Samuel Procópio <tevaum@ig.com.br>
 
 	* pt_BR.po: Updated Brazilian Portuguese Translation.
