Updated Catalan translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-31  Josep Puigdemont  <josep@imatge-sintetica.com>
+
+	* ca.po: Updated Catalan translation.
+
 2005-03-31  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
