--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,9 @@
+2005-03-31  Michael Natterer  <mitch@gimp.org>
+
+	* gtk/gtk-sections.txt: added gtk_menu_set/get_take_focus().
+
+	* gtk/tmpl/gtkmenushell.sgml: regenerated.
+
 2005-03-16  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtk-sections.txt: Add gtk_button_[sg]et_image
