Updated Albanian translation.
2005-03-31  Laurent Dhima  <laurenti@alblinux.net>

	* sq.po: Updated Albanian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-31  Laurent Dhima  <laurenti@alblinux.net>
+
+	* sq.po: Updated Albanian translation.
+
 2005-03-31  Josep Puigdemont  <josep@imatge-sintetica.com>
 
 	* ca.po: Updated Catalan translation.
