Added new Language, Kinyarwanda (rw), to this package

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-31  Steve Murphy  <murf@e-tools.com>
+
+        * rw.po: Updated Kinyarwanda translation from compendium.
+
 2005-04-01  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation.
