--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-20  Steve Murphy  <murf@e-tools.com>
+
+	* rw.po: Kinyarwanda translation updated from compendium.
+
 2005-03-20  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Hungarian translation updated.
